--- a/DockerFiles/Dockerfile-java-spring-v1
+++ b/DockerFiles/Dockerfile-java-spring-v1
@@ -1,4 +1,4 @@
-FROM maven:3.6.1-jdk-8-alpine AS MAVEN_BUILD
+FROM maven:3.6.3-jdk-11 AS MAVEN_BUILD
  
 # copy the pom and src code to the container
 COPY ./ ./
@@ -6,11 +6,11 @@ COPY ./ ./
 # package our application code
 RUN mvn clean package
  
-# the second stage of our build will use open jdk 8 on alpine 3.9
-FROM openjdk:8-jre-alpine3.9
+# the second stage of our build will use open jdk 11 on alpine
+FROM openjdk:11-jre
  
 # copy only the artifacts we need from the first stage and discard the rest
-COPY --from=MAVEN_BUILD /currency-exchange-service/target/currency-exchange-service-0.0.1-SNAPSHOT.jar /currency-exchange-service.jar
+COPY --from=MAVEN_BUILD /target/currency-exchange-service-0.0.1-SNAPSHOT.jar /currency-exchange-service.jar
  
 # set the startup command to execute the jar
 CMD ["java", "-jar", "/currency-exchange-service.jar"]
